stylesheet/styles.css
/* ... */
.exp:before {
  content: counter(section);
  position: absolute;
  border-radius: 50%;
  padding: 3px;
  height: 2em;
  width: 2em;
  background-color: var(--primary-accent);
  text-align: center;
  line-height: 2em;
  color: #000;
  font-size: 1em;
  font-weight: 600;
}
.exp:nth-child(odd) {
  border-right: 5px solid;
  padding-left: 0;
  text-align: left;
}
.exp:nth-child(odd):before {
  left: 100%;
  margin-left: -17px;
}
.exp:nth-child(even) {
  border-left: 5px solid;
  padding-right: 0;
  text-align: right;
}
.exp:nth-child(even):before {
  right: 100%;
  margin-right: -17px;
}
.exp:first-child {
  border-top: 0;
  border-top-right-radius: 0;
  border-top-left-radius: 0;
}
.exp:last-child {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

@media only screen and (max-width: 680px){
  .experince{
    padding: 0 1.5em;
  }
  .experince h2{
    padding: 1em 0;
  }
}


/* ********************* skills css ************************* */
.skills h2{
  width: 100%;
  text-align: center;
  padding: 1em;
  font-size: 3em;
  color: var(--secondary-accent);
}

.skills-container{
  color: var(--background-1);
  text-align: center;
  gap: 2em;
  max-width: 900px;
  padding: 0 0 3em;
 
}

.skills-container i{
  color: var(--background-1);
  font-size: 4em;
  padding: 0.5em;
  
}

.skill-card{
  min-width: 170px;
  max-height: 300px;
  border-radius: 1em;
  padding:0 1em 1em;
  background-color: var(--primary-accent);
  transition: all 0.4s ease-in-out ;
}
.skill-card:hover{
  color: var(--primary-accent);
  background-color: #2b2730;
}

.skill-card:hover i{
  color: var(--primary-accent);
}

@media only screen and (max-width: 680px){
  .skills-container{
    gap: 1em;
  }
}


/* ******************** contact me css ********************* */


.contact-section{
  color: var(--secondary-accent);
  flex-direction: column;
  padding-bottom: 2em;
  
}
.contact-holder{
  width: 100%;
  flex-wrap: wrap-reverse;
  
}

.contact-details{
  width: 40%;
  min-width: 400px;
  padding: 1em;
  max-width: 500px;
}

.contact-details i {
  color: var(--primary-accent);
  padding: 0.5em;
  font-size: 1.2em;
  transition: all 0.3s ease-in;
}

.contact-details a{
  text-decoration: none;
  color: var(--secondary-accent);
  font-size: 1em;
  pointer-events: none;
  
}

.icons{
  padding: 0.5em;
  display: flex;
  gap: 1em;
  pointer-events: all;
}

.icons i{
  color: var(--secondary-accent);
  font-size: 2em;
  padding: 0;
  pointer-events: all;
}

.contact-details div:hover i {
  color: #8c5838;
}

.contact-details a:hover i {
  color: #fc9c60;
}

.contact-form{
  width: 40%;
  padding: 1em;
  max-width: 500px;

}

.input-div{
  position: relative;
  border-bottom: 2px solid var(--secondary-accent);
  margin: 30px 0;
}
.input-div input{
  width: 100%;
  padding: 0 5px;
  color: var(--secondary-accent);
  height: 2em;
  font-size: 1em;
  background: none;
  border: none;
  outline: none;
}

.input-div textarea{
  width: 100%;
  padding: 0px 7px;
  margin-top: 10px;
  color: var(--secondary-accent);
  font-size: 1em;
  background: none;
  border: none;
  outline: none;
}

.input-div label:not(.textarea-label){
  position: absolute;
  top: 50%;
  left: 5px;
  transform: translateY(-50%);
  font-size: 1em;
  pointer-events: none;
  transition: .5s;
}

.textarea-label{
  position: absolute;
  top: 80%;
  left: 5px;
  transition: .5s;
  pointer-events: none;
  transform: translateY(-50%);
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  transition:"color 9999s ease-out, background-color 9999s ease-out";
  transition-delay: 9999s;
  -webkit-transition: "color 9999s ease-out, background-color 9999s ease-out";
  -webkit-transition-delay: 9999s;
}

textarea{
  resize: none;
  margin: 0;
  padding: 0;
}

.input-div span::before{
  content: '';
  position: absolute;
  top: 33px;
  left: 0;
  width: 0%;
  height: 2px;
  background: var(--primary-accent);
  transition: .5s;
}

.input-div .textarea-span::before{
  content: '';
  position: absolute;
  top: 109px;
  left: 0;
  width: 0%;
  height: 2px;
  background: var(--primary-accent);
  transition: .5s;
}

.input-div input:focus ~ label,
.input-div input:valid ~ label,
.input-div textarea:focus ~ label,
.input-div textarea:not(:placeholder-shown) ~ label{
  top: -5px;
  color: var(--primary-accent);
  font-size: 0.8em;
}

.input-div input:focus ~ span::before,
.input-div input:valid ~ span::before{
  width: 100%;
}

.input-div textarea:focus ~ span::before,
.input-div textarea:not(:placeholder-shown) ~ span::before{
  width: 100%;
}

/* .pass{
  margin: -5px 0 20px 5px;
  cursor: pointer;
}

.pass:hover{
  text-decoration: underline;
} */

button{
  width: 10rem;
  height: 50px;
  border: 1px solid;
  background: var(--primary-accent);
  border-radius: 25px;
  font-size: 18px;
  color: var(--background-1);
  font-weight: 600;
  cursor: pointer;
  outline: none;
  transition: background-color 0.3s ease;
}

button:hover{
  background-color: var(--secondary-accent);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

@media only screen and (max-width: 930px){
  .contact-details{
    width: 100%;
    padding: 2em;
    font-size: 0.7em;
  }
  .contact-form{
    width: 100%;
    padding: 2em;
  }
}

/* **************** footer css ******************** */

footer {
  height: 20vh;
  background-color: #0e0c0c;
  text-align: center;
  font-size: 1.2em;
  color: var(--secondary-accent);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
footer a {
  color: var(--primary-accent);
  text-decoration: none;
}

footer a:hover {
  color: #facda1;
}

@media only screen and (max-width: 680px) {
  footer p {
    font-size: 0.7em;
  }
  footer{
    height: 10vh;
  }
}

